Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
                 <div>
                     <h4 class="font-semibold mb-4 text-white">Connect With me</h4>
                     <div class="flex space-x-4">
-                        <a href="x.com" class="text-purple-200 hover:text-white transition-colors"><i data-lucide="twitter"></i></a>
-                        <a href="linkedin.com" class="text-purple-200 hover:text-white transition-colors"><i data-lucide="linkedin"></i></a>
-                        <a href="instagram.com" class="text-purple-200 hover:text-white transition-colors"><i data-lucide="instagram"></i></a>
+                        <a href="https://github.com/SUYASHADITYA919" class="text-purple-200 hover:text-white transition-colors"><i data-lucide="github"></i></a>
+                        <a href="https://www.linkedin.com/in/suyash-aditya919/" class="text-purple-200 hover:text-white transition-colors"><i data-lucide="linkedin"></i></a>
+                        <a href="https://www.instagram.com/aelius_aditya/" class="text-purple-200 hover:text-white transition-colors"><i data-lucide="instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -368,3 +368,4 @@
     </script>
 </body>
 </html>
+
