Fix HTML entity references in index.html
Corrected HTML entity references to ensure proper rendering of the document.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <a href="#home" class="text-secondary hover:text-white transition-colors font-medium">Home</a>
                 <a href="#internships" class="text-secondary hover:text-white transition-colors font-medium">Internships</a>
                 <a href="#prepare" class="text-secondary hover:text-white transition-colors font-medium">Prepare with AI</a>
-                <a href="#about" class="text-secondary hover:text-white transition-colors font-medium">About Us</a>
+                <a href="coming soon.html" class="text-secondary hover:text-white transition-colors font-medium">About Us</a>
                 <a href="premium.html" target="_main" class="text-secondary hover:text-white transition-colors font-medium">Premium</a>
                 </div>
             <div class="hidden md:flex items-center space-x-4">
@@ -368,4 +368,3 @@
     </script>
 </body>
 </html>
-
